Changes to be committed: 	modified:   src/components/Logo.astro 	deleted:    src/components/Map.astro 	modified:   src/components/Navbar.astro 	deleted:    src/components/Paginate.astro 	modified:   src/components/PamatkyGrid.astro 	modified:   src/layouts/PamatkaSingleLayout.astro 	modified:   src/pages/404.astro 	modified:   src/pages/index.astro 	modified:   src/pages/partneri.astro

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -6,7 +6,7 @@ export interface Props {
 const {className} = Astro.props;
 ---
 
-<a href="/" target="_self">
+<a aria-hidden="true" href="/" target="_self">
 <svg id="logo" class={className} xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="1949px" height="469px" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
 viewBox="0 0 1947.9 468.51">
  <defs>
