--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,7 @@ const description = "404 - Stránka Nenalezena"
 
 <Layout title="Průvodce Broumovem" description={description}>
 <div class="container flex flex-col justify-center items-center text-center space-y-2">
-<h1 class="text-6xl font-bold">404</h1>
+<h1 aria-hidden="true" class="text-6xl font-bold">404</h1>
 <p class="font-bold">Stránka nenalezena</p>
 </div>
 </Layout>
