--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const description = "Přijmete pozvánku na procházku Broumovem s nostalgickou 
 <Layout title="Průvodce Broumovem" description={description}>
 
 <div id="container" class="flex flex-col space-y-10 lg:flex-row lg:space-x-10 items-center justify-evenly linky-bg">
-  <section id="welcome" class="flex basis-6/12 flex-col flex-auto flex-wrap lg:text-justify bg-secondary/10 p-5 rounded-md">
+  <section aria-labelledby="Uvítací sekce" id="welcome" class="flex basis-6/12 flex-col flex-auto flex-wrap lg:text-justify bg-secondary/10 p-5 rounded-md">
     <h1>
       <p>
       <span class="text-secondary tracking-wide font-light text-2xl">Přijměte pozvánku na</span>
@@ -32,7 +32,7 @@ const description = "Přijmete pozvánku na procházku Broumovem s nostalgickou 
       </p>
   </section>
 
-  <section class="flex-auto basis-1/6 -z-10" >
+  <section aria-hidden="true" class="flex-auto basis-1/6 -z-10" >
     <Picture  src={IndexBlobs} widths={[400, 500, 600]} aspectRatio={"1143:1255"} alt="" sizes="(max-width: 2048px)" formats={['webp', 'avif', 'png']} />
   </section>
 </div>
