--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -7,7 +7,7 @@ const {className} = Astro.props;
 ---
 
 <a aria-hidden="true" href="/" target="_self">
-<svg id="logo" class={className} xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="1949px" height="469px" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+<svg aria-hidden="true" id="logo" class={className} xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="1949px" height="469px" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
 viewBox="0 0 1947.9 468.51">
  <defs>
   <style type="text/css">
