Changes to be committed: 	modified:   src/assets/img/partneri/euLogo.png 	modified:   src/assets/img/partneri/ulitaLogo.png 	modified:   src/components/Footer.astro 	modified:   src/layouts/Layout.astro 	modified:   src/pages/index.astro 	modified:   src/pages/o-projektu.astro 	modified:   src/pages/partneri.astro

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import astroIcon from '../assets/svg/astroIcon.svg';
 import alpinejsIcon from '../assets/svg/alpinejsIcon.svg';
 ---
 
-<footer class="w-full max-h-fit bg-tertiary p-7 flex flex-wrap flex-row flex-auto items-center justify-center justify-self-end text-xs bottom-0 text-slate-900">
+<footer class="w-full max-h-fit bg-tertiary p-7 flex flex-wrap flex-row flex-auto justify-center self-end justify-self-end text-xs bottom-0 text-slate-900">
   <!-- <div id="sponsors" class="flex flex-wrap flex-col justify-center items-center space-y-4">
     <p class="font-bold">Sponzoři:</p>
     <div id="sponsors-logos" class="flex flex-row flex-wrap justify-center items-center space-x-5">
