--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const description = "Přijmete pozvánku na procházku Broumovem s nostalgickou 
       <p>
       <span class="text-secondary tracking-wide font-light text-2xl">Přijměte pozvánku na</span>
       <br/>
-      <span class="tracking-widest leading-relaxed font-bold uppercase text-quarternary-500">procházku Broumovem</span>
+      <span class="tracking-widest text-3xl leading-relaxed font-bold uppercase text-quarternary-500">procházku Broumovem</span>
       <br/>
       <span class="text-secondary tracking-wide font-light text-2xl">s nostalgickou vzpomínkou na jeho podobu z přelomu 19. a 20. století</span>
     </p>
