--- a/src/pages/o-projektu.astro
+++ b/src/pages/o-projektu.astro
@@ -2,8 +2,25 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 
-const description = ""
+const description = "O projektu"
 ---
 <Layout title="O projektu" description={description}>
-<h1>O projektu</h1>
+<Card className="bg-secondary text-primary space-y-3 text-justify">
+  <h1 class="text-primary mb-5">O projektu</h1>
+<p>
+ Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quis, minima, cupiditate nobis, culpa cum odio ea natus sed voluptates ab saepe. Facere voluptas ratione non eligendi consequuntur rem itaque.
+ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi totam nulla, numquam explicabo corporis repudiandae rerum cumque officia dolorem dignissimos facilis ipsum sed, eligendi, eius alias. Velit sapiente reprehenderit at?
+ Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea debitis minima accusantium ipsum? Placeat cupiditate, aspernatur, repudiandae repellat ratione suscipit odit sapiente, sit vel fugiat nulla sint sed a nam.
+</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, commodi ducimus! Eius deserunt distinctio odit consequatur eligendi eos vitae voluptate magnam maxime porro quidem non quae, obcaecati consequuntur? Ea, illo!
+ Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores asperiores, voluptates quibusdam laboriosam architecto magnam aut aperiam voluptate minima fuga consectetur incidunt ad nam sed voluptatum quidem non esse quos?o
+ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero magni itaque nam libero pariatur odio quia mollitia molestiae dicta blanditiis? Illo deserunt numquam vel est culpa praesentium vitae exercitationem quam!
+ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum quibusdam dolorum eius quo asperiores quod ipsum debitis eum, in eligendi eaque ex laborum temporibus id totam similique eos amet. Repellat.
+</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, commodi ducimus! Eius deserunt distinctio odit consequatur eligendi eos vitae voluptate magnam maxime porro quidem non quae, obcaecati consequuntur? Ea, illo!
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores asperiores, voluptates quibusdam laboriosam architecto magnam aut aperiam voluptate minima fuga consectetur incidunt ad nam sed voluptatum quidem non esse quos?o
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero magni itaque nam libero pariatur odio quia mollitia molestiae dicta blanditiis? Illo deserunt numquam vel est culpa praesentium vitae exercitationem quam!
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum quibusdam dolorum eius quo asperiores quod ipsum debitis eum, in eligendi eaque ex laborum temporibus id totam similique eos amet. Repellat.
+ </p>
+</Card>
 </Layout>
