--- a/src/pages/o-projektu.astro
+++ b/src/pages/o-projektu.astro
@@ -5,22 +5,34 @@ import Card from '../components/Card.astro';
 const description = "O projektu"
 ---
 <Layout title="O projektu" description={description}>
-<Card className="bg-secondary text-primary space-y-3 text-justify">
-  <h1 class="text-primary mb-5">O projektu</h1>
+<Card className="bg-secondary text-primary space-y-3 px-3 md:px-24 pt-7 pb-12 text-center">
+  <h1 class="text-primary">Průvodce broumovskou historií architektury a urbanismu Broumova z přelomu 19. a 20. století</h1>
+  <h2 class="text-center text-primary pb-12"> vznikl společným úsilím:</h2>
 <p>
- Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quis, minima, cupiditate nobis, culpa cum odio ea natus sed voluptates ab saepe. Facere voluptas ratione non eligendi consequuntur rem itaque.
- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi totam nulla, numquam explicabo corporis repudiandae rerum cumque officia dolorem dignissimos facilis ipsum sed, eligendi, eius alias. Velit sapiente reprehenderit at?
- Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea debitis minima accusantium ipsum? Placeat cupiditate, aspernatur, repudiandae repellat ratione suscipit odit sapiente, sit vel fugiat nulla sint sed a nam.
+<span class="font-bold text-xl">studentů Gymnázia Broumov</span>
+<br/>
+<i>jejich texty vznikly na základě dodaných podkladů Státního okresního archivu Náchod, Muzea Broumovska a Městské knihovny Broumov</i>
 </p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, commodi ducimus! Eius deserunt distinctio odit consequatur eligendi eos vitae voluptate magnam maxime porro quidem non quae, obcaecati consequuntur? Ea, illo!
- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores asperiores, voluptates quibusdam laboriosam architecto magnam aut aperiam voluptate minima fuga consectetur incidunt ad nam sed voluptatum quidem non esse quos?o
- Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero magni itaque nam libero pariatur odio quia mollitia molestiae dicta blanditiis? Illo deserunt numquam vel est culpa praesentium vitae exercitationem quam!
- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum quibusdam dolorum eius quo asperiores quod ipsum debitis eum, in eligendi eaque ex laborum temporibus id totam similique eos amet. Repellat.
+<p>
+<span class="font-bold text-xl">Institutu regionální paměti Broumovska</span>
+<br/>
+<i>reprodukce pohlednic, doplnění textů</i>
 </p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, commodi ducimus! Eius deserunt distinctio odit consequatur eligendi eos vitae voluptate magnam maxime porro quidem non quae, obcaecati consequuntur? Ea, illo!
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores asperiores, voluptates quibusdam laboriosam architecto magnam aut aperiam voluptate minima fuga consectetur incidunt ad nam sed voluptatum quidem non esse quos?o
-  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero magni itaque nam libero pariatur odio quia mollitia molestiae dicta blanditiis? Illo deserunt numquam vel est culpa praesentium vitae exercitationem quam!
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum quibusdam dolorum eius quo asperiores quod ipsum debitis eum, in eligendi eaque ex laborum temporibus id totam similique eos amet. Repellat.
- </p>
+<p>
+a <span class="font-bold text-xl">DDM Ulity Broumov</span>
+<br/>
+<i>současné fotografie, tisk</i>
+</p>
+<p>
+  <br/>
+  v rámci projektu Langerova zahrada
+  <br/>
+<span class="italic text-sm">v roce 2017</span> <br/>
+v programu PRB o.p.s Máme rádi Broumovsko
+</p>
 </Card>
 </Layout>
+
+
+<style>
+</style>
