--- a/src/components/PamatkyGrid.astro
+++ b/src/components/PamatkyGrid.astro
@@ -22,15 +22,15 @@ const trasaB = (await Astro.glob('../pages/pamatky/trasa-b/*.md')).sort(
         <!-- Trasa A List -->
           <ul aria-label="Seznam památek v trase A" x-show="trasa === 'Trasa A'"  class="flex flex-wrap flex-auto items-stretch justify-evenly transition-all ease-in-out mt-3">
           {trasaA.map(pamatka =>(
-            <li aria-label={`Památka číslo ${pamatka.frontmatter.id} - ${pamatka.frontmatter.title}`} id={`${pamatka.frontmatter.trasa}-${pamatka.frontmatter.id}`} class="flex bg-secondary text-[#313131] items-start justify-evenly md:flex-row flex-col-reverse sm:landscape:flex-row flex-nowrap sm:landscape:space-x-5 md:space-x-7 md:space-y-0 px-3 md:px-7 py-3 rounded-sm md:items-start md:justify-start flex-auto md:basis-full lg:basis-1/3 md:text-justify m-3 scroll-m-28">
+            <li aria-label={`Památka číslo ${pamatka.frontmatter.id} - ${pamatka.frontmatter.title}`} id={`${pamatka.frontmatter.trasa}-${pamatka.frontmatter.id}`} class="flex bg-secondary text-[#313131] items-start justify-evenly md:flex-row flex-col-reverse sm:landscape:flex-row flex-nowrap sm:landscape:space-x-5 md:space-x-7 md:space-y-0 px-4 md:px-7 py-3 rounded-md md:items-start md:justify-start flex-auto md:basis-full lg:basis-1/3 md:text-justify m-3 scroll-m-28">
               <div aria-hidden="true" id="idBlob" class="hidden md:block md:absolute md:scale-[30%] md:-translate-y-[40%] md:-translate-x-[45%] -rotate-12 z-50">
                 <BlobSingle id={pamatka.frontmatter.id} className="transition-all" />
               </div>
               {pamatka.frontmatter.image &&
-                <Image aria-hidden={"true"} class="md:w-[50%] place-self-center sm:landscape:max-w-[30%] rounded-sm" src={import (`../assets/img/pamatky/${pamatka.frontmatter.image}.webp`)} alt={pamatka.frontmatter.title} /> }
+                <Image aria-hidden={"true"} class="md:w-[50%] place-self-center sm:landscape:max-w-[30%] rounded-md" src={import (`../assets/img/pamatky/${pamatka.frontmatter.image}.webp`)} alt={pamatka.frontmatter.title} /> }
                 <div class="flex flex-col flex-wrap justify-start items-start">
                   <a aria-hidden="true" href={pamatka.url} rel="prefetch">
-                    <h3 class="font-bold text-primary bg-tertiary px-4 py-3 leading-relaxed text-left rounded-sm"><span class="text-3xl md:hidden">{pamatka.frontmatter.id}.</span>{pamatka.frontmatter.title}</h3>
+                    <h3 class="font-bold text-primary bg-tertiary px-4 py-3 leading-relaxed text-left rounded-md"><span class="text-3xl md:hidden">{pamatka.frontmatter.id}.&nbsp;</span>{pamatka.frontmatter.title}</h3>
                   </a>
                   <hr />
                   <p aria-hidden="true">{pamatka.frontmatter.excerpt}</p>
@@ -42,15 +42,15 @@ const trasaB = (await Astro.glob('../pages/pamatky/trasa-b/*.md')).sort(
         <!-- Trasa B List -->
          <ul aria-label="Seznam památek v trase B" x-show="trasa === 'Trasa B'" class="flex flex-wrap flex-auto items-stretch justify-evenly transition-all ease-in-out mt-3">
           {trasaB.map(pamatka =>(
-            <li aria-label={`Památka číslo ${pamatka.frontmatter.id} - ${pamatka.frontmatter.title}`} id={`${pamatka.frontmatter.trasa}-${pamatka.frontmatter.id}`} class="flex items-start justify-evenly bg-secondary text-[#313131] md:flex-row flex-col-reverse sm:landscape:flex-row flex-nowrap sm:landscape:space-x-5 md:space-x-7 md:space-y-0 px-3 md:px-7 py-3 rounded-sm md:items-start md:justify-start flex-auto md:basis-full lg:basis-1/3 md:text-justify m-3 scroll-m-28">
+            <li aria-label={`Památka číslo ${pamatka.frontmatter.id} - ${pamatka.frontmatter.title}`} id={`${pamatka.frontmatter.trasa}-${pamatka.frontmatter.id}`} class="flex items-start justify-evenly bg-secondary text-[#313131] md:flex-row flex-col-reverse sm:landscape:flex-row flex-nowrap sm:landscape:space-x-5 md:space-x-7 md:space-y-0 px-4 md:px-7 py-3 rounded-md md:items-start md:justify-start flex-auto md:basis-full lg:basis-1/3 md:text-justify m-3 scroll-m-28">
               <div aria-hidden="true" id="idBlob" class="hidden md:block md:absolute md:scale-[30%] md:-translate-y-[40%] md:-translate-x-[45%] -rotate-12 z-50">
                 <BlobSingle id={pamatka.frontmatter.id} className="transition-all" />
               </div>
               {pamatka.frontmatter.image &&
-                <Image aria-hidden={"true"} class="md:w-[50%] place-self-center sm:landscape:max-w-[30%] rounded-sm" src={import (`../assets/img/pamatky/${pamatka.frontmatter.image}.webp`)} alt={pamatka.frontmatter.title} /> }
+                <Image aria-hidden={"true"} class="md:w-[50%] place-self-center sm:landscape:max-w-[30%] rounded-md" src={import (`../assets/img/pamatky/${pamatka.frontmatter.image}.webp`)} alt={pamatka.frontmatter.title} /> }
                 <div class="flex flex-col flex-wrap justify-start items-start">
                   <a aria-hidden="true" href={pamatka.url} rel="prefetch">
-                    <h3 class="font-bold text-primary bg-tertiary px-4 py-3 leading-relaxed text-left rounded-sm"><span class="text-3xl md:hidden">{pamatka.frontmatter.id}.</span> {pamatka.frontmatter.title}</h3>
+                    <h3 class="font-bold text-primary bg-tertiary px-4 py-3 leading-relaxed text-left rounded-md"><span class="text-3xl md:hidden">{pamatka.frontmatter.id}.&nbsp;</span>{pamatka.frontmatter.title}</h3>
                   </a>
                   <hr />
                   <p aria-hidden="true">{pamatka.frontmatter.excerpt}</p>
