--- a/src/pages/o-projektu.astro
+++ b/src/pages/o-projektu.astro
@@ -6,8 +6,8 @@ const description = "O projektu"
 ---
 <Layout title="O projektu" description={description}>
 <Card className="bg-secondary text-primary space-y-3 px-3 md:px-24 pt-7 pb-12 text-center">
-  <h1 class="text-primary">Průvodce broumovskou historií architektury a urbanismu Broumova z přelomu 19. a 20. století</h1>
-  <h2 class="text-center text-primary pb-12"> vznikl společným úsilím:</h2>
+  <h1 class="text-3xl font-bold text-primary">Průvodce broumovskou historií architektury a urbanismu Broumova z přelomu 19. a 20. století</h1>
+  <h2 class="text-2xl font-semibold text-center text-primary pb-12"> vznikl společným úsilím:</h2>
 <p>
 <span class="font-bold text-xl">studentů Gymnázia Broumov</span>
 <br/>
