Jedna trasa, priprava na branch to React

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,6 +11,6 @@ const { className } = Astro.props;
 
 <style>
 .card {
-  @apply flex flex-col flex-wrap rounded-md;
+  @apply flex flex-col flex-nowrap rounded-md flex-shrink drop-shadow-md;
 }
 </style>
