--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import PamatkyGrid from '../components/PamatkyGrid.astro';
 import IndexBlobs from '../assets/img/indexBlobs.png';
 import { Picture } from '@astrojs/image/components';
+import PamatkyGridSingle from '../components/PamatkyGridSingle.astro';
 
 const description = "Přijmete pozvánku na procházku Broumovem s nostalgickou vzpomínkou na jeho podobu z přelomu 19. a 20. století."
 ---
@@ -37,7 +36,7 @@ const description = "Přijmete pozvánku na procházku Broumovem s nostalgickou 
   </section>
 </div>
 
-<PamatkyGrid />
+<PamatkyGridSingle />
 
 
 </Layout>
