--- a/src/pages/o-projektu.astro
+++ b/src/pages/o-projektu.astro
@@ -1,38 +1,54 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
 
-const description = "O projektu"
+const description = "O projektu";
 ---
+
 <Layout title="O projektu" description={description}>
-<Card className="bg-secondary text-primary space-y-3 px-3 md:px-24 pt-7 pb-12 text-center">
-  <h1 class="text-3xl font-bold text-primary">Průvodce broumovskou historií architektury a urbanismu Broumova z přelomu 19. a 20. století</h1>
-  <h2 class="text-2xl font-semibold text-center text-primary pb-12"> vznikl společným úsilím:</h2>
-<p>
-<span class="font-bold text-xl">studentů Gymnázia Broumov</span>
-<br/>
-<i>jejich texty vznikly na základě dodaných podkladů Státního okresního archivu Náchod, Muzea Broumovska a Městské knihovny Broumov</i>
-</p>
-<p>
-<span class="font-bold text-xl">Institutu regionální paměti Broumovska</span>
-<br/>
-<i>reprodukce pohlednic, doplnění textů</i>
-</p>
-<p>
-a <span class="font-bold text-xl">DDM Ulity Broumov</span>
-<br/>
-<i>současné fotografie, tisk</i>
-</p>
-<p>
-  <br/>
-  v rámci projektu Langerova zahrada
-  <br/>
-<span class="italic text-sm">v roce 2017</span> <br/>
-v programu PRB o.p.s Máme rádi Broumovsko
-</p>
-</Card>
+  <Card
+    className="bg-secondary text-primary space-y-3 px-3 md:px-24 pt-7 pb-12 text-center"
+  >
+    <h1 class="text-3xl font-bold text-primary">
+      Průvodce broumovskou historií architektury a urbanismu
+    </h1>
+    <h2 class="text-2xl font-semibold text-center text-primary pb-12">
+      vznikl společným úsilím:
+    </h2>
+    <p>
+      <span class="font-bold text-xl">studentů Gymnázia Broumov</span>
+      <br />
+      <i
+        >jejich texty vznikly na základě dodaných podkladů Státního okresního
+        archivu Náchod, Muzea Broumovska a Městské knihovny Broumov</i
+      >
+    </p>
+    <p>
+      <span class="font-bold text-xl"
+        >Institutu regionální paměti Broumovska</span
+      >
+      <br />
+      <i>reprodukce pohlednic, doplnění textů</i>
+    </p>
+    <p>
+      a <span class="font-bold text-xl">DDM Ulity Broumov</span>
+      <br />
+      <i>současné fotografie, tisk</i>
+    </p>
+    <p>
+      <br />
+      v rámci projektu Langerova zahrada
+      <br />
+      <span class="italic text-sm">v roce 2017</span>
+      <br />
+      v programu PRB o.p.s Máme rádi Broumovsko
+    </p>
+    <p class="font-bold">
+      <br />
+      Díky finanční podpoře Evropské unie byl Průvodce Broumovem v roce 2022 v rámci
+      projektu 30 let spolu rozšířen a upraven do současné podoby.
+    </p>
+  </Card>
 </Layout>
 
-
-<style>
-</style>
+<style></style>
